[gd_scene load_steps=6 format=3 uid="uid://xnh6ulpib0gw"]

[ext_resource type="Shader" uid="uid://boqprqjbuqlbq" path="res://Src/Menu/ModernMenu/blur.gdshader" id="1_rkrk1"]
[ext_resource type="Script" uid="uid://bda1qcen12on1" path="res://Src/Menu/ModernMenu/ModernMenu.gd" id="2_pv2gk"]
[ext_resource type="Theme" uid="uid://b3q625u7kqhr4" path="res://Src/Menu/ModernMenu/ModernMenu.theme" id="3_u1sau"]
[ext_resource type="FontFile" uid="uid://btmpm7wiopwuw" path="res://Assets/Fonts/OpenSans/OpenSans-Regular.ttf" id="4_2rb8d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xd3ah"]
shader = ExtResource("1_rkrk1")
shader_parameter/blur_factor = 0.5
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/blur_amount = 0.5
shader_parameter/color_amount = 0.5

[node name="Menu" type="ColorRect"]
material = SubResource("ShaderMaterial_xd3ah")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.651614, 0.523288, 0.830696, 1)
script = ExtResource("2_pv2gk")
debug = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Views" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="Control" parent="Views"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="v" type="VBoxContainer" parent="Views/MainMenu"]
layout_mode = 0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 216.0
offset_right = 258.0
offset_bottom = -16.0
grow_vertical = 2
alignment = 2

[node name="ButtonResume" type="Button" parent="Views/MainMenu/v"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("3_u1sau")
theme_override_fonts/font = ExtResource("4_2rb8d")
text = "TR_MENU_RESUME_GAME"
alignment = 0
clip_text = true

[node name="ButtonNewGame" type="Button" parent="Views/MainMenu/v"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("3_u1sau")
theme_override_fonts/font = ExtResource("4_2rb8d")
text = "TR_MENU_NEW_GAME"
alignment = 0
clip_text = true

[node name="ButtonSaveGame" type="Button" parent="Views/MainMenu/v"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("3_u1sau")
theme_override_fonts/font = ExtResource("4_2rb8d")
text = "TR_MENU_SAVE_GAME"
alignment = 0
clip_text = true

[node name="ButtonLoadGame" type="Button" parent="Views/MainMenu/v"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("3_u1sau")
theme_override_fonts/font = ExtResource("4_2rb8d")
text = "TR_MENU_LOAD_GAME"
alignment = 0
clip_text = true

[node name="ButtonSettings" type="Button" parent="Views/MainMenu/v"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("3_u1sau")
theme_override_fonts/font = ExtResource("4_2rb8d")
text = "TR_MENU_SETTINGS"
alignment = 0
clip_text = true

[node name="ButtonQuit" type="Button" parent="Views/MainMenu/v"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("3_u1sau")
theme_override_fonts/font = ExtResource("4_2rb8d")
text = "TR_MENU_QUIT"
alignment = 0
clip_text = true

[node name="Settings" type="Control" parent="Views"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="BgOverlay" type="ColorRect" parent="Views/Settings"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="w" type="ColorRect" parent="Views/Settings"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 128.0
offset_right = -32.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.0784314)

[node name="Label" type="Label" parent="Views/Settings/w"]
layout_mode = 0
offset_top = -40.0
offset_right = 228.0
offset_bottom = -3.0
theme_override_fonts/font = ExtResource("4_2rb8d")
theme_override_font_sizes/font_size = 24
text = "TR_MENU_SETTINGS"

[node name="SubMenu" type="VBoxContainer" parent="Views/Settings/w"]
layout_mode = 0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = 232.0
offset_bottom = -48.0
grow_vertical = 2

[node name="OptionMenu" type="VBoxContainer" parent="Views/Settings/w"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -352.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonBack" type="Button" parent="Views/Settings/w"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -40.0
offset_right = 232.0
offset_bottom = -8.0
grow_vertical = 0
theme = ExtResource("3_u1sau")
theme_override_fonts/font = ExtResource("4_2rb8d")
text = "TR_MENU_B_BACK"
alignment = 0

[node name="ButtonAccept" type="Button" parent="Views/Settings/w"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = -40.0
offset_right = 544.0
offset_bottom = -8.0
grow_vertical = 0
theme = ExtResource("3_u1sau")
theme_override_fonts/font = ExtResource("4_2rb8d")
text = "TR_MENU_B_ACCEPT"
alignment = 0

[node name="WindowAssign" type="Panel" parent="Views/Settings"]
visible = false
layout_mode = 0
offset_left = 272.0
offset_top = 192.0
offset_right = 624.0
offset_bottom = 312.0

[node name="Label" type="Label" parent="Views/Settings/WindowAssign"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Press any key to assign.
Press ESC to cancel."
autowrap_mode = 2
metadata/_edit_lock_ = true

[connection signal="button_up" from="Views/MainMenu/v/ButtonResume" to="." method="_on_button_resume_button_up"]
[connection signal="button_up" from="Views/MainMenu/v/ButtonNewGame" to="." method="_on_button_new_game_button_up"]
[connection signal="button_up" from="Views/MainMenu/v/ButtonSaveGame" to="." method="_on_button_new_game_button_up"]
[connection signal="button_up" from="Views/MainMenu/v/ButtonLoadGame" to="." method="_on_button_new_game_button_up"]
[connection signal="button_up" from="Views/MainMenu/v/ButtonSettings" to="." method="_on_button_settings_button_up"]
[connection signal="button_up" from="Views/MainMenu/v/ButtonQuit" to="." method="_on_button_quit_button_up"]
[connection signal="button_up" from="Views/Settings/w/ButtonBack" to="." method="_on_button_back_button_up"]
[connection signal="button_up" from="Views/Settings/w/ButtonAccept" to="." method="_on_button_accept_button_up"]
